# agri_selfchain_project

./: Cargo.toml  README.md  chain.json
src/: api.rs  api_main.rs  block.rs  blockchain.rs  cli_main.rs  merkle.rs  tauri_bridge.rs
src-tauri/: tauri.conf
src-tauri/frontend/: index.html  script.json
src-tauri/src/: block.rs  blockchain.rs
