[package]
name = "agri_selfchain_project"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
serde_json = "1.0"
actix-web = "4"

[[bin]]
name = "cli"
path = "src/cli_main.rs"

[[bin]]
name = "api"
path = "src/api_main.rs"